# lidar-camera-calib-point-to-plane

./: README.md
lidar_camera_p_plane/: CMakeLists.txt
lidar_camera_p_plane/config/: calib.yaml
lidar_camera_p_plane/include/: rotation.h
lidar_camera_p_plane/pcd/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd
lidar_camera_p_plane/pcd_filter/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd
lidar_camera_p_plane/point_cloud_filter/: CMakeCache.txt  CMakeLists.txt  Makefile  calib.yaml  cmake_install.cmake  point_cloud_filter  point_cloud_filter.cpp
lidar_camera_p_plane/point_cloud_filter/config/: config.yaml
lidar_camera_p_plane/src/: lidar_camera_p_plane.cpp
